--- a/index.html
+++ b/index.html
@@ -6,18 +6,32 @@
   <meta name="robots" content="noindex" />
   <title>بيوت النحل - روابط</title>
 
+  <!-- Arabic fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Changa:wght@600;700;800&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome (official-style icons) -->
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
     :root{
       --bg:#070a0f;
-      --card:#0f1623;
+      --card1:rgba(10,14,22,.86);
+      --card2:rgba(15,22,35,.92);
       --stroke:rgba(255,255,255,.10);
-      --text:#f6f7fb;
-      --muted:rgba(255,255,255,.68);
-      --gold:#f7c948;
-      --gold2:#f59e0b;
 
-      --btn1:rgba(255,255,255,.06);
-      --btn2:rgba(255,255,255,.03);
+      --text:#f6f7fb;
+      --muted:rgba(255,255,255,.66);
+
+      /* Brand-ish palette قريب من مثال الصورة */
+      --brand-brown:#7a4f12;
+      --brand-gold:#f2b233;
+      --brand-gold2:#f59e0b;
+
+      --btnA:rgba(255,255,255,.06);
+      --btnB:rgba(255,255,255,.03);
 
       --radius:22px;
     }
@@ -26,7 +40,7 @@
 
     body{
       margin:0;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+      font-family: "Cairo", system-ui, -apple-system, Segoe UI, Roboto, Arial;
       color:var(--text);
       min-height:100vh;
       display:flex;
@@ -34,168 +48,246 @@
       align-items:center;
       padding:22px;
 
-      /* Background */
       background:
-        radial-gradient(900px 520px at 55% 8%, rgba(245,158,11,.22) 0%, rgba(0,0,0,0) 55%),
-        radial-gradient(900px 520px at 20% 18%, rgba(247,201,72,.16) 0%, rgba(0,0,0,0) 58%),
-        radial-gradient(800px 500px at 50% 120%, rgba(10,18,32,.85) 0%, rgba(7,10,15,1) 55%),
+        radial-gradient(900px 520px at 55% 6%, rgba(245,158,11,.22) 0%, rgba(0,0,0,0) 55%),
+        radial-gradient(900px 520px at 18% 16%, rgba(242,178,51,.14) 0%, rgba(0,0,0,0) 58%),
+        radial-gradient(900px 520px at 50% 115%, rgba(10,18,32,.88) 0%, rgba(7,10,15,1) 55%),
         var(--bg);
     }
 
     .wrap{
-      width:min(560px, 100%);
-      text-align:center;
-      position:relative;
-    }
-
-    /* Top glow line */
-    .glow{
-      height:1px;
-      width:72%;
-      margin:0 auto 16px;
-      background: linear-gradient(90deg, transparent, rgba(247,201,72,.35), transparent);
-      filter: blur(.2px);
-      opacity:.9;
+      width:min(620px, 100%);
     }
 
     .card{
-      background: linear-gradient(180deg, rgba(15,22,35,.92), rgba(10,14,22,.82));
+      background: linear-gradient(180deg, var(--card2), var(--card1));
       border:1px solid var(--stroke);
-      border-radius: calc(var(--radius) + 10px);
-      padding:22px 18px 18px;
+      border-radius: calc(var(--radius) + 14px);
+      padding:26px 18px 18px;
       box-shadow:
-        0 20px 55px rgba(0,0,0,.55),
+        0 22px 60px rgba(0,0,0,.58),
         inset 0 1px 0 rgba(255,255,255,.06);
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(12px);
+      position:relative;
     }
 
-    /* Logo */
+    /* subtle top highlight */
+    .card:before{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius: calc(var(--radius) + 14px);
+      pointer-events:none;
+      background:
+        radial-gradient(600px 220px at 50% 0%, rgba(242,178,51,.12), transparent 60%);
+      opacity:.9;
+    }
+
+    .header{
+      position:relative;
+      text-align:center;
+      padding-top:6px;
+    }
+
+    /* LOGO */
     .logo{
-      width:92px;
-      height:92px;
+      width:122px;
+      height:122px;
       border-radius:50%;
       margin: 0 auto 14px;
+
+      /* ذهبية أنيقة */
+      background: radial-gradient(circle at 35% 25%, #ffd36a 0%, var(--brand-gold) 48%, var(--brand-gold2) 100%);
+      border: 1px solid rgba(255,255,255,.20);
+
+      /* ring + shadow */
+      box-shadow:
+        0 18px 36px rgba(0,0,0,.55),
+        0 0 0 6px rgba(242,178,51,.12),
+        inset 0 1px 0 rgba(255,255,255,.20);
+
       display:flex;
       align-items:center;
       justify-content:center;
       overflow:hidden;
-      background: radial-gradient(circle at 30% 25%, var(--gold) 0%, var(--gold2) 65%);
-      border:1px solid rgba(255,255,255,.18);
-      box-shadow:
-        0 14px 30px rgba(0,0,0,.50),
-        inset 0 1px 0 rgba(255,255,255,.18);
+      padding:14px; /* هذا مهم عشان اللوقو ما يطلع صغير/مقصوص */
     }
+
     .logo img{
       width:100%;
       height:100%;
-      object-fit:cover;
+      object-fit:contain; /* يضمن ما ينقص اللوقو */
+      image-rendering:auto;
       display:block;
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,.25));
     }
-    /* لو ما حطيت صورة، هذا الإيموجي يطلع */
+
     .logo-fallback{
-      font-size:34px;
-      color:#111;
+      font-size:36px;
+      color:#141414;
       font-weight:900;
       user-select:none;
     }
 
-    h1{
-      margin:0;
-      font-size:28px;
-      font-weight:900;
+    /* Titles (like your sample) */
+    .brand-title{
+      margin: 0;
+      line-height:1.05;
+      font-family: "Changa", "Cairo", system-ui;
+      font-weight:800;
+      font-size:34px;
       letter-spacing:.2px;
     }
 
-    .tagline{
-      margin:6px 0 8px;
-      font-size:14px;
-      color:rgba(255,255,255,.78);
-      font-weight:650;
+    .brand-title .main{
+      color: #d9d9d9;
+      text-shadow: 0 10px 30px rgba(0,0,0,.45);
     }
 
-    .subtitle{
-      margin:0 0 18px;
-      font-size:13px;
-      color:var(--muted);
-      line-height:1.7;
+    .tagline{
+      margin: 6px 0 10px;
+      font-family: "Changa", "Cairo", system-ui;
+      font-weight:700;
+      font-size:18px;
+      color: rgba(255,255,255,.82);
+    }
+
+    /* Make the two-line like example with colors */
+    .titleBlock{
+      margin-top:4px;
+    }
+
+    .titleLine1{
+      font-family:"Changa","Cairo",system-ui;
+      font-weight:800;
+      font-size:40px;
+      line-height:1.05;
+      margin: 0;
+      color: #f2f2f2; /* أبيض نظيف داخل الخلفية */
+      text-shadow: 0 16px 38px rgba(0,0,0,.55);
+    }
+
+    .titleLine2{
+      font-family:"Changa","Cairo",system-ui;
+      font-weight:800;
+      font-size:20px;
+      margin: 6px 0 0;
+      color: var(--brand-gold);
+      text-shadow: 0 10px 28px rgba(0,0,0,.45);
+    }
+
+    /* "روابطنا الرسمية" right aligned */
+    .official{
+      margin-top:16px;
+      text-align:right;
+      font-size:14px;
+      font-weight:800;
+      color: rgba(255,255,255,.78);
+      letter-spacing:.2px;
+      display:flex;
+      justify-content:flex-end;
+      align-items:center;
+      gap:10px;
+    }
+
+    .official:before{
+      content:"";
+      width:34px;
+      height:2px;
+      border-radius:999px;
+      background: linear-gradient(90deg, transparent, rgba(242,178,51,.55));
+      opacity:.95;
     }
 
     .links{
+      margin-top:14px;
       display:flex;
       flex-direction:column;
       gap:12px;
-      margin-top:10px;
+      position:relative;
     }
 
     .btn{
-      appearance:none;
-      border:none;
       width:100%;
+      border:none;
       cursor:pointer;
-      text-decoration:none;
-      color:var(--text);
 
       padding:16px 16px;
       border-radius: var(--radius);
-      background: linear-gradient(180deg, var(--btn1), var(--btn2));
+      background: linear-gradient(180deg, var(--btnA), var(--btnB));
       border:1px solid rgba(255,255,255,.10);
 
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:10px;
+      gap:12px;
 
       box-shadow:
-        0 10px 22px rgba(0,0,0,.35),
+        0 10px 24px rgba(0,0,0,.38),
         inset 0 1px 0 rgba(255,255,255,.06);
 
       transition: transform .13s ease, border-color .13s ease, background .13s ease;
+      position:relative;
     }
 
     .btn:hover{
       transform: translateY(-1px);
-      border-color: rgba(247,201,72,.35);
-      background: linear-gradient(180deg, rgba(247,201,72,.10), rgba(255,255,255,.03));
+      border-color: rgba(242,178,51,.35);
+      background: linear-gradient(180deg, rgba(242,178,51,.12), rgba(255,255,255,.03));
     }
 
     .btn .left{
       display:flex;
       align-items:center;
-      gap:10px;
+      gap:12px;
       font-weight:900;
-      font-size:16px;
+      font-size:17px;
+      color: var(--text);
     }
 
     .ico{
-      width:34px;
-      height:34px;
-      border-radius:12px;
+      width:42px;
+      height:42px;
+      border-radius:14px;
       display:flex;
       align-items:center;
       justify-content:center;
+
       background: rgba(0,0,0,.25);
       border:1px solid rgba(255,255,255,.10);
       box-shadow: inset 0 1px 0 rgba(255,255,255,.06);
-      font-size:16px;
     }
 
+    .ico i{
+      font-size:19px;
+      color: var(--brand-gold);
+    }
+
+    /* brand-ish tweaks */
+    .fa-instagram{ color:#E1306C; }
+    .fa-tiktok{ color:#69C9D0; }
+    .fa-cart-shopping{ color:var(--brand-gold); }
+    .fa-comments{ color:#a7f3d0; }
+
     .chev{
-      opacity:.65;
+      opacity:.55;
       font-size:18px;
-      margin-right:6px;
+      margin-right:2px;
     }
 
     .footer{
       margin-top:16px;
       font-size:12px;
       color:rgba(255,255,255,.55);
+      text-align:center;
+      position:relative;
     }
 
     /* Modal */
     .modal-backdrop{
       position:fixed;
       inset:0;
-      background: rgba(0,0,0,.60);
+      background: rgba(0,0,0,.62);
       display:none;
       align-items:center;
       justify-content:center;
@@ -205,18 +297,18 @@
     .modal-backdrop.show{ display:flex; }
 
     .modal{
-      width:min(420px, 100%);
-      border-radius: 20px;
-      background: linear-gradient(180deg, rgba(15,22,35,.98), rgba(10,14,22,.92));
+      width:min(440px, 100%);
+      border-radius: 22px;
+      background: linear-gradient(180deg, rgba(15,22,35,.98), rgba(10,14,22,.94));
       border:1px solid rgba(255,255,255,.12);
-      box-shadow: 0 30px 80px rgba(0,0,0,.65);
+      box-shadow: 0 34px 90px rgba(0,0,0,.70);
       padding:18px;
       text-align:right;
       position:relative;
       animation: pop .14s ease-out;
     }
     @keyframes pop{
-      from{ transform: scale(.98); opacity:.6 }
+      from{ transform: scale(.985); opacity:.55 }
       to{ transform: scale(1); opacity:1 }
     }
 
@@ -224,76 +316,103 @@
       margin:0 0 6px;
       font-size:18px;
       font-weight:950;
+      color: var(--text);
     }
     .modal p{
       margin:0 0 14px;
-      color:rgba(255,255,255,.70);
+      color:rgba(255,255,255,.72);
       font-size:13px;
-      line-height:1.7;
+      line-height:1.8;
     }
+
     .modal .close{
       width:100%;
       padding:12px 14px;
-      border-radius: 14px;
+      border-radius: 16px;
       border:1px solid rgba(255,255,255,.10);
-      background: linear-gradient(180deg, rgba(247,201,72,.16), rgba(255,255,255,.03));
+      background: linear-gradient(180deg, rgba(242,178,51,.18), rgba(255,255,255,.03));
       color:var(--text);
       font-weight:900;
       cursor:pointer;
     }
+
     .modal .x{
       position:absolute;
       top:10px;
       left:10px;
-      width:36px;
-      height:36px;
-      border-radius: 12px;
+      width:38px;
+      height:38px;
+      border-radius: 14px;
       border:1px solid rgba(255,255,255,.10);
-      background: rgba(255,255,255,.04);
+      background: rgba(255,255,255,.05);
       cursor:pointer;
-      color: rgba(255,255,255,.75);
+      color: rgba(255,255,255,.80);
       font-weight:900;
+      font-size:18px;
+      line-height:1;
+    }
+
+    /* mobile fine-tuning */
+    @media (max-width:420px){
+      .titleLine1{ font-size:34px; }
+      .titleLine2{ font-size:18px; }
+      .btn .left{ font-size:16px; }
+      .logo{ width:112px; height:112px; }
     }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <div class="glow"></div>
-
     <div class="card">
 
-      <!-- LOGO: ضع logo.png داخل نفس الريبو وستظهر الصورة -->
-      <div class="logo" title="بيوت النحل">
-        <!-- لو رفعت صورة باسم logo.png راح تشتغل تلقائيًا -->
-        <img src="logo.png" alt="شعار بيوت النحل"
-             onerror="this.remove(); document.getElementById('logoFallback').style.display='block';">
-        <div id="logoFallback" class="logo-fallback" style="display:none;">🍯</div>
+      <div class="header">
+        <!-- LOGO: ارفع شعارك باسم logo.png داخل نفس الريبو -->
+        <div class="logo" title="بيوت النحل">
+          <img src="logo.png" alt="شعار بيوت النحل"
+               onerror="this.remove(); document.getElementById('logoFallback').style.display='block';">
+          <div id="logoFallback" class="logo-fallback" style="display:none;">🍯</div>
+        </div>
+
+        <!-- Title like sample (two lines + colors) -->
+        <div class="titleBlock">
+          <p class="titleLine1">بيوت النحل</p>
+          <p class="titleLine2">للعسل الطبيعي</p>
+        </div>
+
+        <div class="official">روابطنا الرسمية</div>
       </div>
-
-      <h1>بيوت النحل</h1>
-      <div class="tagline">للعسل الطبيعي</div>
-
-      <div class="subtitle">روابطنا الرسمية</div>
 
       <div class="links">
         <button class="btn" data-title="المتجر الإلكتروني">
-          <span class="left"><span class="ico">🛒</span> المتجر الإلكتروني</span>
+          <span class="left">
+            <span class="ico"><i class="fa-solid fa-cart-shopping"></i></span>
+            المتجر الإلكتروني
+          </span>
           <span class="chev">›</span>
         </button>
 
         <button class="btn" data-title="إنستقرام">
-          <span class="left"><span class="ico">📷</span> إنستقرام</span>
+          <span class="left">
+            <span class="ico"><i class="fa-brands fa-instagram"></i></span>
+            إنستقرام
+          </span>
           <span class="chev">›</span>
         </button>
 
         <button class="btn" data-title="تيك توك">
-          <span class="left"><span class="ico">🎵</span> تيك توك</span>
+          <span class="left">
+            <span class="ico"><i class="fa-brands fa-tiktok"></i></span>
+            تيك توك
+          </span>
           <span class="chev">›</span>
         </button>
 
         <button class="btn" data-title="للتواصل">
-          <span class="left"><span class="ico">💬</span> للتواصل</span>
+          <span class="left">
+            <span class="ico"><i class="fa-solid fa-comments"></i></span>
+            للتواصل
+          </span>
           <span class="chev">›</span>
         </button>
       </div>
@@ -307,8 +426,8 @@
     <div class="modal" role="dialog" aria-modal="true" aria-labelledby="mTitle">
       <button class="x" id="modalX" aria-label="إغلاق">×</button>
       <h3 id="mTitle">قريبًا</h3>
-      <p id="mDesc">هذه الخدمة ستكون متاحة قريبًا بإذن الله.</p>
-      <button class="close" id="modalClose">حسنًا</button>
+      <p id="mDesc">هذه الخدمة ستكون متاحة قريبًا.</p>
+      <button class="close" id="modalClose">تمام</button>
     </div>
   </div>
 
@@ -316,15 +435,13 @@
     // year
     document.getElementById("y").textContent = new Date().getFullYear();
 
-    // modal helpers
+    // modal
     const backdrop = document.getElementById("modalBackdrop");
-    const mTitle = document.getElementById("mTitle");
     const mDesc  = document.getElementById("mDesc");
     const closeBtn = document.getElementById("modalClose");
     const xBtn = document.getElementById("modalX");
 
     function openModal(serviceTitle){
-      mTitle.textContent = "قريبًا";
       mDesc.textContent = "ميزة \"" + serviceTitle + "\" ستكون متاحة قريبًا.";
       backdrop.classList.add("show");
       backdrop.setAttribute("aria-hidden", "false");
@@ -334,22 +451,16 @@
       backdrop.setAttribute("aria-hidden", "true");
     }
 
-    // attach click to all buttons
     document.querySelectorAll(".btn").forEach(btn=>{
       btn.addEventListener("click", ()=>{
         openModal(btn.getAttribute("data-title") || "هذه الخدمة");
       });
     });
 
-    // close interactions
     closeBtn.addEventListener("click", closeModal);
     xBtn.addEventListener("click", closeModal);
-    backdrop.addEventListener("click", (e)=>{
-      if(e.target === backdrop) closeModal();
-    });
-    document.addEventListener("keydown", (e)=>{
-      if(e.key === "Escape") closeModal();
-    });
+    backdrop.addEventListener("click", (e)=>{ if(e.target === backdrop) closeModal(); });
+    document.addEventListener("keydown", (e)=>{ if(e.key === "Escape") closeModal(); });
   </script>
 </body>
 </html>
