--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;800;900&family=Changa:wght@600;700;800&display=swap" rel="stylesheet">
 
-  <!-- Font Awesome (official-style icons) -->
+  <!-- Font Awesome icons -->
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -25,8 +25,9 @@
       --text:#f6f7fb;
       --muted:rgba(255,255,255,.66);
 
-      /* Brand-ish palette قريب من مثال الصورة */
-      --brand-brown:#7a4f12;
+      /* قريب من ألوان شعارك */
+      --brand-brown:#8a5a12;
+      --brand-brown2:#c08a2b;
       --brand-gold:#f2b233;
       --brand-gold2:#f59e0b;
 
@@ -55,9 +56,7 @@
         var(--bg);
     }
 
-    .wrap{
-      width:min(620px, 100%);
-    }
+    .wrap{ width:min(620px, 100%); }
 
     .card{
       background: linear-gradient(180deg, var(--card2), var(--card1));
@@ -69,9 +68,9 @@
         inset 0 1px 0 rgba(255,255,255,.06);
       backdrop-filter: blur(12px);
       position:relative;
+      overflow:hidden;
     }
 
-    /* subtle top highlight */
     .card:before{
       content:"";
       position:absolute;
@@ -83,87 +82,56 @@
       opacity:.9;
     }
 
-    .header{
-      position:relative;
-      text-align:center;
-      padding-top:6px;
-    }
+    .header{ position:relative; text-align:center; }
 
-    /* LOGO */
+    /* LOGO (رمز فقط) */
     .logo{
-      width:122px;
-      height:122px;
+      width:148px;
+      height:148px;
       border-radius:50%;
       margin: 0 auto 14px;
 
-      /* ذهبية أنيقة */
       background: radial-gradient(circle at 35% 25%, #ffd36a 0%, var(--brand-gold) 48%, var(--brand-gold2) 100%);
       border: 1px solid rgba(255,255,255,.20);
 
-      /* ring + shadow */
       box-shadow:
         0 18px 36px rgba(0,0,0,.55),
-        0 0 0 6px rgba(242,178,51,.12),
+        0 0 0 7px rgba(242,178,51,.12),
         inset 0 1px 0 rgba(255,255,255,.20);
 
       display:flex;
       align-items:center;
       justify-content:center;
       overflow:hidden;
-      padding:14px; /* هذا مهم عشان اللوقو ما يطلع صغير/مقصوص */
+
+      /* قللت البادينق عشان الرمز يكبر */
+      padding:10px;
     }
 
     .logo img{
       width:100%;
       height:100%;
-      object-fit:contain; /* يضمن ما ينقص اللوقو */
-      image-rendering:auto;
+      object-fit:contain;
       display:block;
-      filter: drop-shadow(0 6px 10px rgba(0,0,0,.25));
+      filter: drop-shadow(0 6px 10px rgba(0,0,0,.22));
     }
 
-    .logo-fallback{
-      font-size:36px;
-      color:#141414;
-      font-weight:900;
-      user-select:none;
-    }
-
-    /* Titles (like your sample) */
-    .brand-title{
-      margin: 0;
-      line-height:1.05;
-      font-family: "Changa", "Cairo", system-ui;
-      font-weight:800;
-      font-size:34px;
-      letter-spacing:.2px;
-    }
-
-    .brand-title .main{
-      color: #d9d9d9;
-      text-shadow: 0 10px 30px rgba(0,0,0,.45);
-    }
-
-    .tagline{
-      margin: 6px 0 10px;
-      font-family: "Changa", "Cairo", system-ui;
-      font-weight:700;
-      font-size:18px;
-      color: rgba(255,255,255,.82);
-    }
-
-    /* Make the two-line like example with colors */
-    .titleBlock{
-      margin-top:4px;
-    }
+    /* Title like your sample */
+    .titleBlock{ margin-top:6px; }
 
     .titleLine1{
       font-family:"Changa","Cairo",system-ui;
       font-weight:800;
-      font-size:40px;
+      font-size:44px;
       line-height:1.05;
       margin: 0;
-      color: #f2f2f2; /* أبيض نظيف داخل الخلفية */
+
+      /* لون بني/ذهبي غني */
+      background: linear-gradient(180deg, #d7b07a 0%, var(--brand-brown2) 55%, var(--brand-brown) 100%);
+      -webkit-background-clip: text;
+      background-clip:text;
+      color: transparent;
+
       text-shadow: 0 16px 38px rgba(0,0,0,.55);
     }
 
@@ -171,31 +139,32 @@
       font-family:"Changa","Cairo",system-ui;
       font-weight:800;
       font-size:20px;
-      margin: 6px 0 0;
+      margin: 7px 0 0;
       color: var(--brand-gold);
       text-shadow: 0 10px 28px rgba(0,0,0,.45);
     }
 
-    /* "روابطنا الرسمية" right aligned */
+    /* "روابطنا الرسمية" على اليمين */
     .official{
-      margin-top:16px;
+      margin-top:18px;
       text-align:right;
       font-size:14px;
-      font-weight:800;
+      font-weight:900;
       color: rgba(255,255,255,.78);
       letter-spacing:.2px;
+
       display:flex;
-      justify-content:flex-end;
+      justify-content:flex-start; /* في RTL هذا يعني يمين */
       align-items:center;
       gap:10px;
     }
 
-    .official:before{
+    .official:after{
       content:"";
-      width:34px;
+      width:42px;
       height:2px;
       border-radius:999px;
-      background: linear-gradient(90deg, transparent, rgba(242,178,51,.55));
+      background: linear-gradient(90deg, rgba(242,178,51,.55), transparent);
       opacity:.95;
     }
 
@@ -246,8 +215,8 @@
     }
 
     .ico{
-      width:42px;
-      height:42px;
+      width:44px;
+      height:44px;
       border-radius:14px;
       display:flex;
       align-items:center;
@@ -258,22 +227,14 @@
       box-shadow: inset 0 1px 0 rgba(255,255,255,.06);
     }
 
-    .ico i{
-      font-size:19px;
-      color: var(--brand-gold);
-    }
+    .ico i{ font-size:19px; color: var(--brand-gold); }
 
-    /* brand-ish tweaks */
     .fa-instagram{ color:#E1306C; }
     .fa-tiktok{ color:#69C9D0; }
     .fa-cart-shopping{ color:var(--brand-gold); }
     .fa-comments{ color:#a7f3d0; }
 
-    .chev{
-      opacity:.55;
-      font-size:18px;
-      margin-right:2px;
-    }
+    .chev{ opacity:.55; font-size:18px; margin-right:2px; }
 
     .footer{
       margin-top:16px;
@@ -307,23 +268,10 @@
       position:relative;
       animation: pop .14s ease-out;
     }
-    @keyframes pop{
-      from{ transform: scale(.985); opacity:.55 }
-      to{ transform: scale(1); opacity:1 }
-    }
+    @keyframes pop{ from{transform:scale(.985);opacity:.55} to{transform:scale(1);opacity:1} }
 
-    .modal h3{
-      margin:0 0 6px;
-      font-size:18px;
-      font-weight:950;
-      color: var(--text);
-    }
-    .modal p{
-      margin:0 0 14px;
-      color:rgba(255,255,255,.72);
-      font-size:13px;
-      line-height:1.8;
-    }
+    .modal h3{ margin:0 0 6px; font-size:18px; font-weight:950; color:var(--text); }
+    .modal p{ margin:0 0 14px; color:rgba(255,255,255,.72); font-size:13px; line-height:1.8; }
 
     .modal .close{
       width:100%;
@@ -352,12 +300,11 @@
       line-height:1;
     }
 
-    /* mobile fine-tuning */
     @media (max-width:420px){
-      .titleLine1{ font-size:34px; }
+      .titleLine1{ font-size:36px; }
       .titleLine2{ font-size:18px; }
       .btn .left{ font-size:16px; }
-      .logo{ width:112px; height:112px; }
+      .logo{ width:134px; height:134px; padding:9px; }
     }
   </style>
 </head>
@@ -365,16 +312,13 @@
 <body>
   <div class="wrap">
     <div class="card">
-
       <div class="header">
-        <!-- LOGO: ارفع شعارك باسم logo.png داخل نفس الريبو -->
+
+        <!-- استخدم رمز الشعار فقط -->
         <div class="logo" title="بيوت النحل">
-          <img src="logo.png" alt="شعار بيوت النحل"
-               onerror="this.remove(); document.getElementById('logoFallback').style.display='block';">
-          <div id="logoFallback" class="logo-fallback" style="display:none;">🍯</div>
+          <img src="logo_mark.png" alt="رمز بيوت النحل">
         </div>
 
-        <!-- Title like sample (two lines + colors) -->
         <div class="titleBlock">
           <p class="titleLine1">بيوت النحل</p>
           <p class="titleLine2">للعسل الطبيعي</p>
@@ -423,19 +367,17 @@
 
   <!-- Modal -->
   <div id="modalBackdrop" class="modal-backdrop" aria-hidden="true">
-    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="mTitle">
+    <div class="modal" role="dialog" aria-modal="true">
       <button class="x" id="modalX" aria-label="إغلاق">×</button>
-      <h3 id="mTitle">قريبًا</h3>
+      <h3>قريبًا</h3>
       <p id="mDesc">هذه الخدمة ستكون متاحة قريبًا.</p>
       <button class="close" id="modalClose">تمام</button>
     </div>
   </div>
 
   <script>
-    // year
     document.getElementById("y").textContent = new Date().getFullYear();
 
-    // modal
     const backdrop = document.getElementById("modalBackdrop");
     const mDesc  = document.getElementById("mDesc");
     const closeBtn = document.getElementById("modalClose");
@@ -452,9 +394,7 @@
     }
 
     document.querySelectorAll(".btn").forEach(btn=>{
-      btn.addEventListener("click", ()=>{
-        openModal(btn.getAttribute("data-title") || "هذه الخدمة");
-      });
+      btn.addEventListener("click", ()=> openModal(btn.getAttribute("data-title") || "هذه الخدمة"));
     });
 
     closeBtn.addEventListener("click", closeModal);
