--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@
       border-radius:50%;
       margin: 0 auto 14px;
 
-      background: radial-gradient(circle at 35% 25%, #ffd36a 0%, var(--brand-gold) 48%, var(--brand-gold2) 100%);
-      border: 1px solid rgba(255,255,255,.20);
+      background: #fff;
+      border: 2px solid var(--brand-gold);
+
 
       box-shadow:
         0 18px 36px rgba(0,0,0,.55),
