--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       width: 100%;
       height: 100%;
       border-radius: 50%;
-      background: #1F2A1E;
+      background: #FAF6F0;
       display: flex;
       align-items: center;
       justify-content: center;
